Fix Firefox issues
* Remove the worker in favor of a delayed update on the swatch, as
  OffscreenCanvas is not supported in Firefox
* Fix some CSS issues

--- a/src/components/Swatch.css
+++ b/src/components/Swatch.css
@@ -10,12 +10,16 @@
 
 .slider {
   width: 200px;
-  appearance: none;
+  /*appearance: none;*/
   background: transparent;
 }
 
 .slider:focus {
   outline: none;
+}
+
+.slider::-moz-focus-outer {
+  border: 0;
 }
 
 .slider::-webkit-slider-thumb {
@@ -81,6 +85,7 @@
   position: absolute;
   right: -116px;
   top: 96px;
+  height: 3px;
 }
 
 .cursor {
